--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-  <a href="/sample5/step1">sample5-1(DB:UPDATE,DELETE)(認証付き)</a>
+  <a href="/sample5/step1">sample5-1(DB:UPDATE,DELETE)(認証付き)</a><br>
+  <a href="/sample5/step7">sample5-7(DBとSSE)(認証付き)</a><br>
 </body>
 
 </html>
